Create List component to render three lists

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,17 @@ ul {
   align-items: center;
   justify-content: center;
 }
+
+.item--disabled {
+  position: relative;
+}
+
+.item--disabled::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+}
