--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,4 @@
-.App {
-  text-align: center;
-}
-
-ul {
-  list-style: none;
-}
-
-.item {
-  cursor: pointer;
-  width: 200px;
-  height: 100px;
-  border: solid 1px #333;
-  margin-bottom: 10px;
+.lists {
   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.item--disabled {
-  position: relative;
-}
-
-.item--disabled::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.3);
+  justify-content: space-between;
 }
