--- a/client/src/Note/Note.module.css
+++ b/client/src/Note/Note.module.css
@@ -38,3 +38,17 @@
   box-sizing: border-box;
   outline: none;
 }
+
+.enter {
+  opacity: 0;
+  height: 0;
+  min-height: 0;
+  padding: 0;
+}
+
+.enterActive {
+  opacity: 1;
+  height: 12em;
+  min-height: 12em;
+  padding: 1em;
+}
