--- a/client/src/Board/Board.module.css
+++ b/client/src/Board/Board.module.css
@@ -15,6 +15,8 @@
   border-width: 12px;
   box-shadow: 0 0 1px 2px #847867;
   min-height: 95vh;
+  max-width: 1250px;
   box-sizing: border-box;
   background-color: #333;
+  margin: 0 auto;
 }
