--- a/client/src/List/List.module.css
+++ b/client/src/List/List.module.css
@@ -1,5 +1,25 @@
 .listContainer {
-  margin: 0 1em;
+  padding: 0 1em 1em 1em;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-right: 1px solid #ddd;
+}
+
+.listContainer:last-child {
+  border-right-style: none;
+}
+
+.header {
+  font-family: 'Kalam', cursive;
+  font-size: 2em;
+  color: #ddd;
+  border-bottom: 2px dashed #ddd;
+  padding-bottom: 0.5rem;
+  margin: 0 auto 2rem auto;
+  width: 14rem;
+  text-align: center
 }
 
 .list {
