--- a/client/src/Note/Note.module.css
+++ b/client/src/Note/Note.module.css
@@ -29,9 +29,11 @@
   right: 0;
   top: 0;
   cursor: pointer;
-  outline: none;
   border-style: none;
   background-color: transparent;
+  padding: 0.5em 0.85em;
+  color: #555;
+  font-weight: bold;
 }
 
 .close span {
